# MO412-graph-algorithms

./: .gitignore  LICENSE  README.md  requirements.txt
activity_10_robustness/: report.tex  result.tex  robustness.py
activity_11_max_flow/: README.md  max_flow.py
activity_11_max_flow/data/: links.csv  nodes.csv
activity_1_degree_distribution/: README.md  degree_distribution.py
activity_2_depth_first_search/: README.md  depth_first_search.py
activity_3_breadth_first_search/: README.md  breadth_first_search.py
activity_4_cayley_tree/: README.md  cayley_tree.py  k.csv  k.json
activity_5_scale_free_networks/: README.md  scale_free_networks.py
activity_6_differential_equations/: README.md
activity_7_barabasi_albert_model/: 100.pkl  1000.pkl  10000.pkl  README.md  barabasi_albert_model.py  cumulative_degree_distribution.py
activity_9_strongly_connected_components/: README.md  strongly_connected_components.py
project/: README.md  explore.ipynb  main.py  setup.cfg
project/data/: README.md
project/report/: report.tex
project/report/analysis/: BDD_target_votes.txt  Miniapolis_target_votes.txt  graph.gephi  robustness.pkl
project/rfa/: CummulativeDegreeDistribution.py  DegreeType.py  GraphPerYear.py  NetworkAnalyzer.py  RobustnessToAttack.py  WikiData.py  WikiDataGraphMaker.py  WikiDataReader.py  __init__.py  votes_per_year.py
project/rfa/exception/: WikiDataException.py  __init__.py
project/src/: NetworkAnalyzer.py  WikiData.py  cumulative_degree_distribution.py  votes_per_year.py
quiz/: 2021_068.py  2022_184.py  report.tex
references/: venv.md
(+22 files in other folders)
