[metadata]
name = rfa
version = attr: rfa.__version__
url = https://github.com/lucasguesserts/MO412-graph-algorithms
description = attr: rfa.__doc__
author = Lucas Guesser Targino da Silva and Fabio Gomes de Assuncao
author_email = lucasguesserts@gmail.com
maintainer = Lucas Guesser Targino da Silva
maintainer_email = lucasguesserts@gmail.com
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
keywords = network science, graph algorithms
platform = any

[options]
packages =
setup_requires = setuptools
python_requires = >= 3.10
install_requires =
    networkx == 2.8.6
    pandas == 1.4.3
    numpy == 1.23.2
    notebook == 6.4.12
    matplotlib == 3.5.3
    black == 22.10
    scipy == 1.9.3
